[package]
name = "fix-getters-def"
version = "0.2.0"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["development-tools", "command-line-utilities"]
description = "Fix getters definition by removing the get prefix when applicable"
keywords = ["rust", "code", "getter", "programming", "migration"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/fengalin/fix-getters"
edition = "2018"

[dependencies]
clap = "2.33"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
stderrlog = "0.5"
smallvec = "1.6.1"
syn = { version = "1.0", default-features = false, features = ["parsing", "full", "extra-traits", "visit"] }

rules = { package = "fix-getters-rules", path = "../rules" }
utils = { package = "fix-getters-utils", path = "../utils" }
