[package]
name = "fix-getters-rules"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["development-tools", "command-line-utilities"]
keywords = ["rust", "code", "getter", "programming", "migration"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/fengalin/fix-getters"
edition = "2018"

[dependencies]
once_cell = "1"

[features]
default = ["dir-entry"]

# dir_entry module.
dir-entry = []
