[package]
name = "fix-getters-utils"
version = "0.2.1"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["development-tools", "command-line-utilities"]
description = "Utils for fix-getters"
keywords = ["rust", "code", "getter", "programming", "migration"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/fengalin/fix-getters"
edition = "2018"

[dependencies]
log = { version = "0.4", optional = true }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
rules = { package = "fix-getters-rules", version = "0.2.1" }
syn = { version = "1.0", default-features = false, features = ["parsing", "full", "extra-traits", "visit"] }

[features]
default = ["log"]
